--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,14 +5,11 @@
 }
 
 .banner {
-    padding: 0 16px;
-
-    height: 48px;
-
     display: flex;
-    justify-content: space-between;
     align-items: center;
-
+    justify-content: space-between;
+    padding: 0 16px;
+    height: 48px;
     background-color: var(--color-background-secondary);
 
     @media (--media-tablet) {
@@ -46,8 +43,8 @@
 
 .logo {
     margin: 0;
-    font-weight: bold;
     font-size: 1rem;
+    font-weight: bold;
     text-transform: uppercase;
 
     @media (--media-tablet) {
@@ -58,7 +55,6 @@
 .list {
     margin: 0;
     padding: 0;
-
     list-style: none;
 }
 
@@ -68,8 +64,8 @@
 
 .link {
     color: var(--color-navigation-link);
-    text-decoration: none;
     letter-spacing: 1px;
+    text-decoration: none;
     text-transform: uppercase;
 
     &:hover,
@@ -85,14 +81,14 @@
 }
 
 .a {
+    position: relative;
     display: flex;
+    padding: 8px 16px;
+    background-color: var(--color-white);
     color: var(--color-navigation-link);
     font-size: 20px;
     text-decoration: none;
-    background-color: var(--color-white);
-    position: relative;
-    padding: 8px 16px;
-    transition: opacity 0.3s;
+    transition: opacity .3s;
 
     &:hover,
     &:focus {
@@ -121,11 +117,9 @@
 }
 
 .navigation {
-    height: 48px;
-
     display: flex;
+    height: 48px;
     overflow: hidden;
-
     border-bottom: 1px solid var(--color-dark-grey);
 }
 
@@ -140,8 +134,8 @@
 }
 
 .scrollContainer {
-    padding: 0 16px;
     display: inline-block;
+    padding: 0 16px;
 }
 
 .menuButton {
