--- a/src/hoc/Layout/Layout.css
+++ b/src/hoc/Layout/Layout.css
@@ -1,13 +1,14 @@
 .layout {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .main {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    align-items: center;
     padding: 0 16px;
 
     @media (--media-desktop) {
