--- a/src/pages/DeptsPage/DeptsPage.css
+++ b/src/pages/DeptsPage/DeptsPage.css
@@ -14,8 +14,7 @@
 
 td[data-delete] {
     color: red;
-    opacity: .2;
-    transition: opacity .2s ease-in-out .1s;
+    transition: opacity 0.2s ease-in-out 0.1s;
 
     &:hover,
     &:focus {
